@@ -546,5 +546,7 @@ Tue Feb 23 12:48:24 CST 2016
 - [+] arch/x86/kernel/cpu.c			[D] vendor-specific things
 - [+] arch/x86/kernel/cpu_intel.c
 - [+] kernel/resource.c
+- [M] arch/x86/include/asm/asm.c		[D] cpuid wrappers
+- [M] arch/x86/include/asm/processor.c		[D] struct cpu_dev
 - [M] arch/x86/kernel/setup.c
 - [M] include/sandix/bug.h			[D] BUILD_BUG_ON
